# test_elon_musk

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/elon_back/: db.sqlite3  manage.py  pytest.ini
backend/elon_back/elon_back/: asgi.py  settings.py  urls.py  wsgi.py
backend/elon_back/mainapp/: admin.py  models.py
backend/elon_back/mainapp/api/: serializers.py  urls.py  views.py
backend/elon_back/mainapp/migrations/: 0001_initial.py  0002_advantage_is_displayed_menuitem_is_displayed.py  0003_alter_menuitem_options_advantage_order_and_more.py  0004_alter_advantage_order_alter_menuitem_order.py  0005_rename_name_menuitem_title.py
backend/elon_back/tests/: test_api.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Content.js  ContentItem.js  Header.js
