[tool.poetry]
name = "elon-back"
version = "0.1.0"
description = ""
authors = ["p_kozhevnikov <kozhevnikov0001@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
